<resources>
    <string name="app_name">Pokedex EGSys</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Procurar pokemon..</string>
    <string name="hint_search">Digite um pokemon..</string>
    <string name="InvalidName">NOME INVÁLIDO</string>
    <string name="normal">Normal</string>
    <string name="fire">Fire</string>
    <string name="grass">Grass</string>
    <string name="water">Water</string>
    <string name="flying">Flying</string>
    <string name="fighting">Fighting</string>
    <string name="poison">Poison</string>
    <string name="electric">Electric</string>
    <string name="ground">Ground</string>
    <string name="rock">Rock</string>
    <string name="psychic">Psychic</string>
    <string name="ice">Ice</string>
    <string name="bug">Bug</string>
    <string name="ghost">Ghost</string>
    <string name="steel">Steel</string>
    <string name="dragon">Dragon</string>
    <string name="dark">Dark</string>
    <string name="fairy">Fairy</string>
    <string name="none">None</string>

</resources>